--- a/render.yaml
+++ b/render.yaml
@@ -1,1 +1,11 @@
+services:
+  - type: web
+    name: backend
+    env: java
+    plan: free
+    buildCommand: "./mvnw clean package"
+    startCommand: "java -jar target/backend-0.0.1-SNAPSHOT.jar"
+    envVars:
+      - key: DATABASE_URL
+        value: "your_database_url_here"
 
