--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.application.name=backend
+
 # Server Configuration
 server.port=8080
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=Zacklazackla@92
+
+# PostgreSQL Database (Render)
+spring.datasource.url=jdbc:postgresql://dpg-cv0gmiq3esus73aluieg-a.oregon-postgres.render.com/mydb_kb8z
+spring.datasource.username=zexus_admin
+spring.datasource.password=xqG8KMT0FVoNnsuTKNsU6O7J7EiPtOBz
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-# H2 Database Configuration (For local storage)
 
 # File Upload Directory (Local Storage)
 file.upload-dir=D:/Backend/uploads
